# demolab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  DEVELOPING.md  EMBEDDING.md  GETTING_STARTED.md  README.md  Taskfile.yml  UPDATE.md  all.html  ar010.html  ar011.html  ar012.html  ar013.html  ar014.html  ar015.html  ar016.html  ar017.html  ar018.html  ar019.html  ar020.html  ar021.html  ar022.html  ar023.html  ar024.html  ar025.html  ar026.html  demolab.py  documentation.html  index.html  pyproject.toml  ruff.toml
.github/workflows/: deploy-wiki.yml.example  deploy.yml  landing-preview.yml  landing.yml  publish.yml  tests.yml
artifacts/nb002/: numbers.json
artifacts/nb003/: numbers.json
artifacts/nb004/: numbers.json
core/: ruff.toml
core/mujoco/: test_mujoco.py  tool.py
core/neuron/: test_neuron.py  tool.py
demolab-engine/: CHANGELOG.md
demolab-engine/guides/: HOUSESTYLE.md  RULES.md  SLIDES.md  STRUCTURE.md  SUPPORT.md
demolab-engine/runbooks/: DOCTOR.md  EMBED-DOCS.md  FROM-JUPYTER.md  FROM-PAPER.md  GETTING-STARTED.md  LINT.md  MIGRATE-STACK.md  NEXT.md  STEELMAN.md  TOUR.md  UPDATE.md
demolab-engine/scaffold/: demo-manifest.json
demolab-engine/scaffold/demo/: demolab.yaml
demolab-engine/scaffold/demo/site/: install.ps1  landing.typ
demolab-engine/scaffold/demo/writings/: ar004.slide.typ  ar005.slide.typ  ar007.typ  ar008.typ  ar009.typ  ar017.typ
demolab-engine/scaffold/skeleton/: demolab.yaml
demolab-engine/scaffold/starters/monte-carlo-pi/: exp000.py  exp000.typ
demolab-web/: astro.config.mjs  package.json
demolab-web/src/: content.config.ts
demolab-web/src/components/: LIFPlayground.astro
demolab-web/src/lib/: entries.ts
demolab-web/src/pages/articles/: [...id].astro  index.astro
demolab-web/src/pages/collections/: [collection].astro
demolab-web/src/styles/: global.css
demolab_cli/: AGENT.md  CHANGELOG.md  __init__.py  _paths.py  build.py  cli.py  devserver.py  overlay.py  slides.py  test_build_resilience.py  test_cli.py  test_command_catalog.py  test_devserver.py  test_engine_build.py  test_init_and_staging.py  test_overlay.py  test_slide_catalog.py  test_slides.py
demolab_cli/deploy/: preview.yml
demolab_cli/guides/: AUTORESEARCH-RULES.md  GLOSSARY.md  RULES.md  SLIDES.md  STRUCTURE.md  SUPPORT.md
demolab_cli/runbooks/: AUTORESEARCH.md  DOCTOR.md  EMBED-DOCS.md  FROM-JUPYTER.md  FROM-PAPER.md  GETTING-STARTED.md  LINT.md  LITERATURE-SEARCH.md  MIGRATE-CODE.md  MIGRATE-STACK.md  NEXT.md  NIGHT-SHIFT.md  PLAN.md  RED-TEAM.md  UPDATE.md
demolab_cli/scaffold/: demo-manifest.json
demolab_cli/scaffold/demo/: demolab.yaml
demolab_cli/scaffold/demo/site/: landing.typ
demolab_cli/scaffold/demo/writings/: ar004.slide.typ  ar005.slide.typ  ar006.typ  ar010.typ  ar011.typ  ar012.typ  ar013.typ  ar014.typ  ar015.typ  ar016.typ  ar017.typ  ar018.typ  ar019.typ  ar020.typ  ar021.typ  ar022.typ  ar023.typ  ar024.typ  ar025.typ  ar026.typ  exp000.typ  exp001.typ  exp002.typ  exp003.typ
demolab_cli/scaffold/root/: AGENTS.md  CLAUDE.md  README.md  gitignore  pyproject.toml
demolab_cli/scaffold/root/github/workflows/: tests.yml
demolab_cli/scaffold/skeleton/: HOUSESTYLE.local.md  demolab.yaml
demolab_cli/scaffold/starters/monte-carlo-pi/: README.md  exp000.typ
demolab_cli/typ/: lib.typ  main.typ  style.css
entries/: ar003.mdx  ar008.mdx  nb000.mdx  nb001.mdx  nb002.mdx  nb003.mdx  nb004.typ
guides/: GETTING_STARTED.md  MIGRATING.md
landing/: index.html  install.ps1  install.sh
scripts/: nb000.py  nb001.py  nb002.py  nb003.py  nb004.py  ruff.toml
scripts/helpers/: __init__.py
src/clis/mujoco_cli/: cli.py
src/clis/neuron_cli/: cli.py
src/clis/streamlit_cli/: app.py
src/docs/: .env.development  astro.config.mjs
src/docs/content/articles/: ar001.mdx  ar002.mdx  ar003.mdx  ar004.md  ar005.md  ar006.md  ar007.md  ar008.mdx
src/docs/content/notebooks/: nb000.mdx  nb002.mdx  nb003.mdx
src/docs/public/notebooks/nb000/: numbers.json
src/docs/public/notebooks/nb001/: numbers.json
src/docs/src/: content.config.ts
src/docs/src/components/: EntryList.astro  LIFPlayground.astro  ParameterTable.astro
src/docs/src/content/articles/: ar001.mdx  ar003.mdx  art000.mdx  art001.mdx
src/docs/src/content/notebooks/: nb000.mdx  nb001.mdx  nb002.mdx  nb003.mdx
src/docs/src/content/posts/: nb000.mdx
src/docs/src/layouts/: Base.astro  Post.astro
src/docs/src/lib/: entries.ts
src/docs/src/pages/: index.astro
src/docs/src/pages/collections/: [collection].astro  index.astro
src/docs/src/pages/notebooks/: [...id].astro  index.astro
src/docs/src/pages/posts/: [...id].astro
src/docs/src/styles/: global.css
src/lab/: cli.py
src/lab/notebooks/: nb000.py  nb001.py
src/notebooks/: nb000.py  nb001.py  nb002.py  nb003.py
src/simulator/: cli.py
src/simulators/mujoco_lab/: cli.py
src/simulators/neuron/: cli.py
src/simulators/simulator/: cli.py
src/tools/mujoco/: tool.py
src/tools/neuron/: tool.py
