[project]
name = "demolab"
version = "0.1.0"
description = "Lab notebook for computational science: Python tools produce per-run artifacts; Typst publishes them as a web bundle, per-entry PDFs, and a book."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "mujoco>=3.2",
    "imageio[ffmpeg]>=2.34",
    "streamlit>=1.36",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
# The engine smoke test always runs; tools/ + experiments/ tests are collected when those dirs
# exist (scaffolded content, absent on a clean engine-only tree). Missing testpaths are skipped.
testpaths = ["demolab-engine/build", "tools", "experiments"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
