[project]
name = "demolab"
version = "0.1.0"
description = "Lab notebook for computational science: Python tools produce per-run artifacts; Typst publishes them as a web bundle, per-entry PDFs, and a book."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "mujoco>=3.2",
    "imageio[ffmpeg]>=2.34",
    "streamlit>=1.36",
]

# `demolab <command>` is the lab's command runner (replaces the old go-task Taskfile). The launcher
# is demolab.py at the repo root; it finds the engine in the working tree and dispatches to the real
# CLI in demolab-engine/build/cli.py. Installed into the venv by `uv sync`.
[project.scripts]
demolab = "demolab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship only the launcher — the engine + content are read from the working tree at runtime, never
# packaged. (This is the whole "wheel": one tiny module that exists to register the console script.)
[tool.hatch.build.targets.wheel]
include = ["demolab.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
# The engine smoke test always runs; tools/ + experiments/ tests are collected when those dirs
# exist (scaffolded content, absent on a clean engine-only tree). Missing testpaths are skipped.
testpaths = ["demolab-engine/build", "tools", "experiments"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
